--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WhatsApp Transcript to PDF Converter</title>
+  <title>Browser-Based WhatsApp Chat Transcript (.txt) to PDF Converter</title>
   <!-- Marked and Highlight.js -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
@@ -158,7 +158,8 @@
     <div id="controls">
       <!-- Input Section -->
       <div class="input-section">
-        <h2>WhatsApp Transcript to PDF Converter</h2>
+        <h2>Browser-Based WhatsApp Chat Transcript (.txt) to PDF Converter</h2>
+        <a href="https://github.com/iasad12/whatsapptranscripttopdf">Access the ReadMe from Here</a>
         <textarea id="transcriptInput" placeholder="Paste your WhatsApp transcript here..."></textarea>
         <br>
         <input type="file" id="fileInput" accept=".txt">
