--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
         box-shadow: none;
       }
     }
+    footer {
+      text-align: center;
+      padding: 10px 0;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    footer a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -159,16 +172,18 @@
       <!-- Input Section -->
       <div class="input-section">
         <h2>Browser-Based WhatsApp Chat Transcript (.txt) to PDF Converter</h2>
-        <a href="https://github.com/iasad12/whatsapptranscripttopdf">Access the ReadMe from Here</a>
-      </br>
         <textarea id="transcriptInput" placeholder="Paste your WhatsApp transcript here..."></textarea>
         <br>
         <input type="file" id="fileInput" accept=".txt">
         <br><br>
+        <!-- Button group -->
         <button onclick="processTranscript()">Render Transcript</button>
         <button onclick="window.print()">Print</button>
+        <!-- Read Documentation button floats to the right -->
+        <button style="float: right;" onclick="window.open('https://github.com/iasad12/whatsapptranscripttopdf','_blank')">Read Documentation</button>
         <!-- New Transcript button appears only after a transcript is generated -->
         <button id="newTranscriptBtn" onclick="newTranscript()">New Transcript</button>
+        <div style="clear: both;"></div>
       </div>
 
       <!-- Filter Section (hidden until transcript is loaded) -->
@@ -207,6 +222,11 @@
       <div id="chatContainer"></div>
     </div>
   </div>
+  
+  <!-- Footer Section -->
+  <footer>
+    <a href="https://www.facebook.com/iasad12/" target="_blank">Facebook Profile</a>
+  </footer>
 
   <script>
     const monthNames = ["January", "February", "March", "April", "May", "June",
