--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       
       // If no messages were parsed, alert the user.
       if (messages.length === 0) {
-        alert("Apologies! The data you've entered is in incorrect format. Thus, the chat could not be parsed. Please provide us the data with the correct formatting. Please refer to the documentation for more info!");
+        alert("Apologies! The data you've entered is in incorrect format. Thus, the chat could not be parsed. Please refer to the documentation for more info regarding acceptable formating!");
         return;
       }
       
